--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -102,6 +102,9 @@
 			<trans-unit id="settings.enableConfirmationMails">
 				<target>Bestätigungs-E-Mails einschalten?</target>
 			</trans-unit>
+			<trans-unit id="settings.dontAppendL">
+				<target>Hänge die Sprach-UID an die E-Mail-Templates an?</target>
+			</trans-unit>
 			<trans-unit id="settings.module_sys_dmail_html">
 				<target>Newsletter im HTML-Format abonnieren?</target>
 			</trans-unit>
