--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -171,6 +171,12 @@
 			<trans-unit id="error_not_here">
 				<source>Error: this point should not be reached!</source>
 			</trans-unit>
+			<trans-unit id="email.dear-gender-first-and-last-name">
+				<source>Dear %s %s %s,</source>
+			</trans-unit>
+			<trans-unit id="email.dear-first-and-last-name">
+				<source>Dear %s %s,</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
